Fixed button icons not vertically aligned with text

--- a/src/css/boom/button.less
+++ b/src/css/boom/button.less
@@ -30,7 +30,7 @@ html.boom .b-button, .b-button {
 
 		.b-button-text, .ui-button-text {
 			text-indent: 0;
-			margin-left: 45px;
+			margin-left: 50px;
 			padding: 0 5px 0 0;
 
 			.b-button-text, .ui-button-text {
@@ -82,6 +82,7 @@ html.boom .b-button, .b-button {
 		margin: 0;
 		display: block;
 		position: absolute;
+		line-height: 28px;
 
 		&.fa-eye-slash {
 			color: @pink;
